Created empty logon page

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 
 rocket = "0.5.0-rc.2"
+[dependencies.rocket_dyn_templates]
+version = "0.1.0-rc.2"
+features = ["handlebars"]
+rocket_dyn_templates = "0.1.0-rc.2"
+
