Have connection to database server

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+rand = "0.7.3"
 rocket = "0.5.0-rc.2"
 [dependencies.rocket_dyn_templates]
 version = "0.1.0-rc.2"
 features = ["handlebars"]
-rocket_dyn_templates = "0.1.0-rc.2"
-
+[dependencies.rocket_sync_db_pools]
+features = ["diesel_mysql_pool"]
+version = "0.1.0-rc.2"
+#//[dependencies.rocket_db_pools]
+#version = "0.1.0-rc.2"
+#features = ["sqlx_mysql"] SL connection error: error:0A000102S
