--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 rand = "0.7.3"
 rocket = "0.5.0-rc.2"
+string-builder = "0.2.0"
 [dependencies.rocket_dyn_templates]
 version = "0.1.0-rc.2"
 features = ["handlebars"]
